Update my_class html files by header and footer

--- a/css/common.css
+++ b/css/common.css
@@ -388,3 +388,17 @@
 .layout {
   box-sizing: border-box;
 }
+
+.all-elements {
+  height: 100%;
+}
+.page-content {
+  height: 100%;
+}
+.container {
+  height: 100%;
+}
+
+.footer {
+  box-sizing: content-box;
+}
