--- a/css/my_class.css
+++ b/css/my_class.css
@@ -1,10 +1,19 @@
 .layout {
   width: 100%;
-  height: 100%;
   background-color: #e8f5ff;
   overflow-x: hidden;
   overflow-y: auto;
   margin-bottom: -100px; /* 因為 footer 有 margin-bottom 100px */
+}
+
+@media (max-width: 1023px) {
+  .layout {
+    height: 100%;
+  }
+
+  .layout[data-type=""] {
+    height: auto;
+  }
 }
 
 .class-container {
@@ -146,11 +155,10 @@
 @media (max-width: 1023px) {
   .left {
     width: 100%;
-    height: auto;
     flex-direction: column;
     position: absolute;
     left: 0px;
-    top: 80px;
+    top: 140px;
   }
 
   .left[data-type=""] {
@@ -176,6 +184,7 @@
 
   .left-popup {
     height: 100%;
+    min-height: 100vh;
     position: initial;
   }
 
@@ -665,7 +674,7 @@
   align-items: center;
   padding-left: 16px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .reserve-action-select {
